# HybridParallelBFS

./: README.md
proBDF/: CMakeLists.txt  Makefile  README.md  简历项目经历_HybridParallelBFS.docx
proBDF/scripts/: plot_speedup.py  run_experiments.bat  run_experiments.py  verify_correctness.py
proBDF/src/: bfs_hybrid.cpp  bfs_hybrid.hpp  bfs_mpi.cpp  bfs_mpi.hpp  common.hpp  graph_generator.cpp  graph_io.cpp  graph_io.hpp  main.cpp
